# DA-Research

./: .gitignore  milestone-deliverables-guidelines.md  package.json
common/: pyproject.toml
common/src/da_tps_analyzer/: tps_script.py
paper-latex/: README.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
paper-latex/sections/: conclusion.tex  introduction.tex  methodology.tex  results.tex
protocol/Avail/: avail_get_block.js  avail_max_tps.js  avail_telemetry_probe.py  avail_test_data.js  avail_test_data_2.py  avail_tps.py  block_bloat_test.py  block_bloat_test_autoshrink.py  package-lock.json  package.json
protocol/Celestia/: README.md  celestia_data.py  celestia_max_tps.js  celestia_max_tps_copy.js  celestia_tps.js  celestia_tps.py  package.json
protocol/Espresso/: espresso-da.py  espresso_max_tps.py  espresso_tps.py
protocol/Near/: generate_access_keys.js  near_diag_check.js  near_tps.py  pyproject.toml  send_multiple_txs_in_block.py  send_single_tx.py  tps_stress_test.js  tps_stress_test.py
protocol/Polkadot/: estimate_preimagecost.js  package-lock.json  package.json  polkadot_add_10_tx.js  polkadot_add_data.js  polkadot_tps.py  submit_preimage.js
